feat: Add AI Summary Mind Map component and enhance podcast app
- Add AISummaryMindMap React component for visualizing episode insights
- Enhance podcast UI with modern dashboard layout and sidebar navigation
- Implement URL routing for /search-podcast, /podcast-details, /audio-transcription
- Refactor component structure: move from /public to /client/src architecture
- Polish PodcastDetails with improved hero styling and responsive design
- Add comprehensive documentation for AI summary process and service breakdown
- Configure new AI services and summary processing capabilities
- Update webpack proxy configuration for API routing
- Remove deprecated .gitkeep files and reorganize project structure

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,12 +17,11 @@
   <link rel="manifest" href="/manifest.json">
   
   <!-- PWA Icons -->
-  <link rel="icon" href="/icons/create-icons.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/icons/create-icons.svg">
-  <link rel="mask-icon" href="/icons/create-icons.svg" color="#3a7bd5">
+  <link rel="icon" href="/assets/images/create-icons.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/assets/images/create-icons.svg">
+  <link rel="mask-icon" href="/assets/images/create-icons.svg" color="#3a7bd5">
   
-  <!-- App Stylesheets -->  
-  <link rel="stylesheet" href="/styles.css">
+  <!-- App styles are bundled by Webpack; no external stylesheet needed. -->
 </head>
 <body>
   <div id="root"></div>
