--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <link rel="mask-icon" href="/icons/create-icons.svg" color="#3a7bd5">
   
   <!-- App Stylesheets -->  
-  <link rel="stylesheet" href="styles.css">
+  <!-- CSS is handled by the build system -->
   
   <!-- React and Babel Scripts -->  
   <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
@@ -43,7 +43,6 @@
   <script type="text/babel" data-presets="env,react" data-plugins="transform-async-to-generator" src="app.js"></script>
   
   <!-- PWA Service Worker Registration -->
-  <script src="registerSW.js"></script>
   
   <!-- PWA Notification Support -->
   <script src="notification-helper.js"></script>
