--- a/public/offline.html
+++ b/public/offline.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PodcastHub - Offline</title>
-  <link rel="stylesheet" href="styles.css">
+  <!-- CSS is handled by the build system -->
   <style>
     .offline-container {
       display: flex;
